<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.i-novus.messaging</groupId>
    <artifactId>messaging-pom</artifactId>
    <packaging>pom</packaging>
    <version>4.6.0-SNAPSHOT</version>

    <parent>
        <groupId>net.n2oapp.platform</groupId>
        <artifactId>n2o-boot-platform-parent</artifactId>
        <version>6.1.3</version>
        <relativePath />
    </parent>

    <properties>
        <java.version>17</java.version>
        <n2o.version>7.28.2</n2o.version>
        <access.version>8.0.1</access.version>
        <jacoco.skip>true</jacoco.skip>
        <lombok.version>1.18.30</lombok.version>
        <amazonaws.version>1.12.772</amazonaws.version>
    </properties>

    <name>Messaging</name>

    <url>https://messaging.i-novus.ru</url>

    <scm>
        <connection>scm:git:https://git.i-novus.ru/platform/messaging.git</connection>
        <url>https://git.i-novus.ru/platform/messaging</url>
        <developerConnection>scm:git:https://git.i-novus.ru/platform/messaging.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>I-Novus LLC</name>
        <url>https://i-novus.ru/</url>
    </organization>

    <modules>
        <module>messaging-admin-frontend</module>
        <module>messaging-admin-web</module>
        <module>messaging-api</module>
        <module>messaging-impl</module>
        <module>messaging-support-kafka</module>
        <module>messaging-web</module>
        <module>messaging-backend</module>
        <module>messaging-channel-api</module>
        <module>messaging-channel-email</module>
        <module>messaging-channel-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-rest-api</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-api</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-auth</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-rest-client</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-auth-common</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-channel-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-support-kafka</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-admin-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-web</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            <stagingProgressTimeoutMinutes>10</stagingProgressTimeoutMinutes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
